deploy_backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ashwin2415/backend:final_gke_v1
          command: ["gunicorn", "backend.wsgi", "--bind", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
