worker_deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: songs-worker
spec:
  selector:
    matchLabels:
      app: songs-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: songs-worker
    spec:
      containers:
      - name: songs-worker
        image: ashwin2415/songs_worker:final_gke_v1
        imagePullPolicy: Always
        #resources:
        #  requests:
        #    cpu: 1000m
        #    memory: 1000Mi
        resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "250m"
